# mycelian-memory

./: .cursorignore  .gitignore  CITATION.cff  CLAUDE.md  CLIENT_REORGANIZATION_PLAN.md  CONTRIBUTING.md  DEVELOPER.md  Makefile  README.md  SECURITY.md  Sequoia-Arc-Application.md  TODO.md  go.work  requirements.txt  setup-env.sh  task-list  test-auth.md  test_auth.go
_docs/: activecontext.md  postgresql_impl  tasklist.md
api/: buf.gen.yaml  buf.yaml  go.mod
tools/langgraph-benchmarker/: README.md  __init__.py  config.example.toml  debug_memory_agent_workflow.py  debug_single_turn.py  pyproject.toml  requirements.txt  setup-tool-env.sh  test.toml  test_components.py  test_memory_agent.py  test_tiny.toml
tools/langgraph-benchmarker/src/: __init__.py  config.py  main.py  types.py
tools/langgraph-benchmarker/src/agents/: memory_agent.py  qa_agent.py
tools/langgraph-benchmarker/src/nodes/: conversation_processor.py  evaluation_node.py  results_node.py  setup_node.py
tools/langgraph-benchmarker/src/utils/: dataset_loader.py  model_factory.py
tools/langgraph-benchmarker/src/workflows/: end_to_end.py
tools/langgraph-benchmarker/test_results/: longmemeval_results_longmemeval_minimal_20250826_182916.json  longmemeval_results_longmemeval_minimal_20250826_185510.json  longmemeval_results_longmemeval_minimal_20250826_185610.json  longmemeval_results_tiny_test_20250826_200146.json  summary_longmemeval_minimal_20250826_182916.json  summary_longmemeval_minimal_20250826_185510.json  summary_longmemeval_minimal_20250826_185610.json  summary_tiny_test_20250826_200146.json
(+679 files in other folders)
